--- a/home.css
+++ b/home.css
@@ -8,6 +8,7 @@
     --accent: #6AABD2;
     --light: #F2F3F7;
     --dark: #141414;
+    --mid: #727272;
 }
 
 body {
@@ -22,9 +23,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 10vh;
+    height: 15vh;
     transition: 0.5s;
-    overflow: hidden;
     text-align: center;
     display: flex;
     flex-flow: row nowrap;
@@ -36,13 +36,14 @@ header {
 header a {
     color: var(--light);
     text-decoration: none;
-    padding: 15px 20px;
+    padding: 20px 20px;
     font-size: 1.7rem;
     transition: 0.5s ease-in-out;
 }
 
 header a:hover {
-    scale: 1.1;
+    scale: 1.2;
+    font-weight: bold;
     color: var(--accent);
 }
 
@@ -53,7 +54,7 @@ header a:hover {
 }
 
 #hero {
-    background-color: gray;
+    background-color: var(--mid);
     background-image: url(../CR/hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -62,7 +63,7 @@ header a:hover {
     background-attachment: fixed;
     height: 100vh;
     width: 100%;
-    margin-top: -10vh;
+    margin-top: -15vh;
     text-align: center;
 }
 
@@ -72,10 +73,16 @@ header a:hover {
 
 #hero-text h1 {
     font-size: 7rem;
-    padding-bottom: 60px;
+    padding-bottom: 20vh;
 }
 
-button {
+.button {
+    position: fixed;
+    width: max-content;
+    height: max-content;
+    inset: 0;
+    margin: 85vh auto;
+    z-index: 1;
     font-size: 1.5rem;
     font-family:'Alegreya', serif;
     font-weight: bold;
@@ -85,9 +92,10 @@ button {
     border: none;
     border-radius: 12px;
     transition: 0.5s ease-in-out;
+    text-decoration: none;
 }
 
-#hero button:hover, #hero button:focus {
+#hero .button:hover, #hero .button:focus {
     scale: 1.1;
     color: var(--accent);
     background-color: var(--light);
@@ -98,21 +106,158 @@ span {
 }
 
 #aboutus {
-    height: 85vh;
+    min-height: 65vh;
     padding-top: 15vh;
     padding-left: 50px;
     padding-right: 50px;
+    padding-bottom: 20vh;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
     gap: 25px;
 }
 
 #aboutus p {
     font-size: 1.3rem;
+    max-width: 50%;
 }
 
 #aboutus img {
-    height: 75vh;
+    height: 60vh;
     width: 40%;
     clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 }
+
+#products {
+    min-height: 65vh;
+    padding-top: 15vh;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20vh;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    background-color: var(--mid);
+    background-image: url(./productsbg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.product {
+    width: 30%;
+    min-width: 300px;
+    height: 60vh;
+    text-align: center;
+    border: var(--accent) solid 2px;
+    text-decoration: none;
+    transition: 0.5s ease-in-out;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.product:hover, .product:focus {
+    box-shadow: 0 0 1px var(--light), 0 0 5px var(--light), 0 0 10px var(--accent), 0 0 20px var(--accent);
+    text-shadow: 0 0 0.25px var(--light), 0 0 1.25px var(--light), 0 0 2.5px var(--accent), 0 0 5px var(--accent);
+}
+
+.product h2 {
+    color: var(--accent);
+    font-size: 1.5rem;
+    padding: 15px 25px;
+}
+
+.product p {
+    padding: 15px 25px;
+    font-size: 1.3rem;
+    color: var(--light);
+}
+
+.product h6 {
+    padding: 15px 25px;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: var(--accent);
+}
+
+#contactus {
+    min-height: 65vh;
+    padding-top: 15vh;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20vh;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 50px;
+}
+
+.enquiry {
+    display: flex;
+    flex-flow: column nowrap;
+    height: 60vh;
+}
+
+#enquiryheading {
+    padding: 15px;
+    color: var(--accent);
+    font-size: 1.4rem;
+}
+
+.contactinfo {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.contactinfo h2 {
+    padding: 30px;
+    font-family: 'Alegreya', serif;
+    font-size: 1.6rem;
+    color: var(--accent);
+}
+
+label {
+    font-size: 1.3rem;
+    color: var(--accent);
+}
+
+
+input[type=text] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: block;
+    border: none;
+    background: var(--mid);
+    color: var(--light);
+  }
+
+textarea {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: block;
+    border: none;
+    background: var(--mid);
+    color: var(--light);
+  }
+
+button {
+    background-color: var(--accent);
+    color: var(--mid);
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 40%;
+    opacity: 0.9;
+  }
+
