--- a/home.css
+++ b/home.css
@@ -23,14 +23,40 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 15vh;
-    transition: 0.5s;
+    height: 10.5vh;
+    transition: 0.3s ease-in-out;
     text-align: center;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-evenly;
     z-index: 1;
+}
+
+nav{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10.5vh;
+    transition: 0.3s ease-in-out;
+    text-align: center;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    z-index: 1;}
+
+header.scrolled{
+    background-color: #727272;
+    opacity: 0.95;
+    transition: 0.3s ease-in-out;
+}
+
+.highlight {
+    scale: 1.2;
+    font-weight: bold;
+    color: var(--accent);
 }
 
 header a {
