--- a/home.css
+++ b/home.css
@@ -45,12 +45,12 @@ nav{
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-evenly;
-    z-index: 1;}
+    z-index: 1;
+}
 
 header.scrolled{
-    background-color: #727272;
-    opacity: 0.95;
-    transition: 0.3s ease-in-out;
+    background-color: var(--dark);
+    transition: 0.5s ease-in-out;
 }
 
 .highlight {
@@ -73,12 +73,6 @@ header a:hover {
     color: var(--accent);
 }
 
-#header1 {
-    color: var(--accent);
-    scale: 1.2;
-    font-weight: bold;
-}
-
 #hero {
     background-color: var(--mid);
     background-image: url(../CR/hero.jpg);
@@ -89,17 +83,17 @@ header a:hover {
     background-attachment: fixed;
     height: 100vh;
     width: 100%;
-    margin-top: -15vh;
+    margin-top: -10.5vh;
     text-align: center;
-}
-
-#hero-text {
-    padding: 25vh 0px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 #hero-text h1 {
     font-size: 7rem;
-    padding-bottom: 20vh;
+    padding: 25vh 0;
 }
 
 .button {
@@ -119,6 +113,7 @@ header a:hover {
     border-radius: 12px;
     transition: 0.5s ease-in-out;
     text-decoration: none;
+
 }
 
 #hero .button:hover, #hero .button:focus {
@@ -127,8 +122,12 @@ header a:hover {
     background-color: var(--light);
 }
 
-span {
+.blue {
     color: var(--accent);
+}
+
+.white {
+    color: var(--light);
 }
 
 #aboutus {
@@ -220,7 +219,7 @@ span {
     padding-right: 50px;
     padding-bottom: 20vh;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: space-evenly;
     gap: 50px;
@@ -230,28 +229,45 @@ span {
     display: flex;
     flex-flow: column nowrap;
     height: 60vh;
+    width: 40%;
+    border: var(--accent) 2px solid;
 }
 
 #enquiryheading {
-    padding: 15px;
     color: var(--accent);
-    font-size: 1.4rem;
+    padding: 10px 0;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+form {
+    padding: 15px 30px;
 }
 
 .contactinfo {
     display: flex;
     flex-flow: column nowrap;
+    justify-content: space-evenly;
+    height: 60vh;
+    width: 40%;
+    border: var(--accent) 2px dashed;
 }
 
 .contactinfo h2 {
-    padding: 30px;
+    padding: 30px 30px;
+    font-weight: normal;
     font-family: 'Alegreya', serif;
-    font-size: 1.6rem;
+    font-size: 1.7rem;
+    color: var(--light);
+}
+
+.contactinfo span {
     color: var(--accent);
 }
 
 label {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
+    font-weight: normal;
     color: var(--accent);
 }
 
@@ -264,6 +280,7 @@ input[type=text] {
     border: none;
     background: var(--mid);
     color: var(--light);
+    font-family: 'Alegreya', serif;
   }
 
 textarea {
@@ -273,17 +290,30 @@ textarea {
     display: block;
     border: none;
     background: var(--mid);
+    font-family: 'Alegreya', serif;
     color: var(--light);
   }
 
 button {
     background-color: var(--accent);
-    color: var(--mid);
-    padding: 14px 20px;
+    color: var(--light);
+    font-size: 1.2rem;
+    padding: 15px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 40%;
-    opacity: 0.9;
+    align-self: center;
+    transition: 0.5s ease-in-out;
   }
+
+  button:hover {
+    background-color: var(--light);
+    color: var(--accent);
+  }
+
+@media screen and (max-width: 650px) {
+    #hero h1 {font-size: 6rem; font-weight: normal; padding: 15vh 0;}  
+    #nomobile {display: none;}
+}
 
