--- a/home.css
+++ b/home.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 :root {
@@ -90,11 +91,36 @@ header a:hover {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    animation: heroAnim 5s ease-in-out 0s 1 normal forwards;
+}
+
+@keyframes heroAnim {
+	0% {
+		background-position: 100% 50%;
+	}
+
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 #hero-text h1 {
     font-size: 7rem;
     padding: 25vh 0;
+    opacity: 0;
+    animation: herotextAnim 2s ease-in-out 1s 1 normal forwards;
+}
+
+@keyframes herotextAnim {
+	0% {
+		opacity: 0;
+		transform: translateY(50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
 
 .button {
@@ -158,7 +184,7 @@ header a:hover {
 
 #products {
     min-height: 65vh;
-    padding-top: 15vh;
+    padding-top: 20vh;
     padding-left: 50px;
     padding-right: 50px;
     padding-bottom: 20vh;
@@ -315,6 +341,7 @@ button {
     background-color: var(--light);
     color: var(--accent);
   }
+
 
 @media screen and (max-width: 800px) {
     #hero h1 {font-size: 6rem; font-weight: normal; padding: 15vh 0;}  
