--- a/home.css
+++ b/home.css
@@ -371,5 +371,5 @@ button {
 @media screen and (max-width: 400px) {
 	body {font-size: 10px}
 	#hero h1 {font-size: 3rem}
-	#contactus {padding-top: 10vh; font-size: 1rem}
+	#contactinfo h2 {font-size: 1.2rem}
 }
