--- a/home.css
+++ b/home.css
@@ -370,6 +370,6 @@ button {
 
 @media screen and (max-width: 400px) {
 	body {font-size: 10px}
-	#hero h1 {font-size: 3rem}
-	#contactinfo h2 {font-size: 1.2rem}
+	#hero h1 {font-size: 2.5rem; overflow: wrap}
+	#contactinfo h2 {font-size: 1rem}
 }
