--- a/home.css
+++ b/home.css
@@ -32,6 +32,7 @@ body {
 
 .topnav .icon {
     display: none;
+    color: var(--accent);
 }
 
 @media screen and (max-width: 800px) {
@@ -370,6 +371,6 @@ button {
 
 @media screen and (max-width: 400px) {
 	body {font-size: 10px}
-	#hero h1 {font-size: 2.5rem; overflow: wrap}
-	#contactinfo h2 {font-size: 1rem}
+	#hero h1 {font-size: 3rem; overflow: wrap}
+	#contactinfo h2 {font-size: 0.8rem}
 }
